fix navigate bar display bugs on mobile devices

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -203,7 +203,7 @@
   }
 
   .visible-links {
-    display: table;
+    display: inline-table;
 
     li {
       display: table-cell;
